Update image URL to be local

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ const metadata = {
       },
       { text: 'GitHub', href: 'https://github.com/Niieux' },
     ]}
-    image={{ src: '~/assets/images/hero-image.png', alt: 'AstroWind Hero Image' }}
+    image={{ src: '~/assets/images/hero-image.png', alt: 'Niieux Desktop Screenshot' }}
   >
     <Fragment slot="title">
       A all new GNU/Linux <span class="hidden xl:inline">operating system</span>
@@ -103,14 +103,10 @@ const metadata = {
       },
     ]}
     image={{
-      src: 'https://niieux.com/wp-content/uploads/2025/07/Screenshot-2025-07-11-151645.png',
+      src: '~/assets/images/theme-switcher-screenshot.png',
       alt: 'Niieux Theme Switcher Screenshot',
     }}
   >
-    <Fragment slot="content">
-      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Building on modern foundations</h3>
-      Gain a competitive advantage by incorporating industry leading practices
-    </Fragment>
 
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
