--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,13 +13,14 @@ import Stats from '~/components/widgets/Stats.astro';
 import CallToAction from '~/components/widgets/CallToAction.astro';
 
 const metadata = {
-  title: 'Niieux — The future of GNU/Linux',
+  title: 'Niieux',
   ignoreTitleTemplate: true,
 };
 ---
 
 <Layout metadata={metadata}>
   <!-- Hero Widget ******************* -->
+
   <Hero
     actions={[
       {
@@ -34,14 +35,13 @@ const metadata = {
     image={{ src: '~/assets/images/hero-image.png', alt: 'Niieux Desktop Screenshot' }}
   >
     <Fragment slot="title">
-      A all new GNU/Linux <span class="hidden xl:inline">operating system</span>
+      A all new GNU/Linux <span class="hidden xl:inline">distro</span>
       <span class="text-accent dark:text-white"></span>
     </Fragment>
 
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
-        <span class="font-semibold">Niieux</span> <span class="hidden xl:inline">is a Debian 13-based Linux distro designed for beginners and developers, featuring a modified GNOME desktop, no bloatwa[...]</span>
-      </span>
+        <span class="font-semibold">Niieux</span> <span class="hidden xl:inline">is a Debian 13-based Linux distro designed for beginners and developers, featuring a modified, faster and more customizable GNOME desktop, no bloatware, and Flatpak support.</span>
     </Fragment>
   </Hero>
 
