Update links to open in new tab

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ const metadata = {
         target: '_blank',
         icon: 'tabler:download',
       },
-      { text: 'GitHub', href: 'https://github.com/Niieux' },
+      { text: 'GitHub', href: 'https://github.com/Niieux', target: '_blank' },
     ]}
     image={{ src: '~/assets/images/hero-image.png', alt: 'Niieux Desktop Screenshot' }}
   >
@@ -197,7 +197,7 @@ const metadata = {
       {
         title: 'Step 3: <span class="font-medium">Customize styles</span>',
         description:
-          'Give it your personal touch. Tailor colors, fonts, and layouts until it feels just right. Your unique flair, amplified by AstroWind! Precision in design ensures a seamless user experience.[...]',
+          'Give it your personal touch. Tailor colors, fonts, and layouts until it feels just right. Your unique flair, amplified by AstroWind! Precision in design ensures a seamless user experience.[[...]',
         icon: 'tabler:paint',
       },
       {
@@ -226,17 +226,17 @@ const metadata = {
       {
         title: 'How do I install ?',
         description:
-          'We offer a easy installation guide at https://github.com/Niieux/docs/install-guide.md',
+          'We offer an easy installation guide at <a href="https://github.com/Niieux/docs/install-guide.md" target="_blank" rel="noopener noreferrer">https://github.com/Niieux/docs/install-guide.md</a>.',
       },
       {
         title: 'What do I do if I need help using Niieux?',
         description:
-          "Feel free to contact support@niieux.com for support or open a issue on our Github",
+          'Feel free to contact <a href="mailto:support@niieux.com" target="_blank" rel="noopener noreferrer">support@niieux.com</a> for support or open an issue on our <a href="https://github.com/Niieux" target="_blank" rel="noopener noreferrer">GitHub</a>.',
       },
       {
         title: "I need help making a Theme on the Theme Maker?",
         description:
-          "Visit https://github.com/Niieux/docs/theme-maker-guide.md for a amazing guide on using the Theme maker.",
+          'Visit <a href="https://github.com/Niieux/docs/theme-maker-guide.md" target="_blank" rel="noopener noreferrer">https://github.com/Niieux/docs/theme-maker-guide.md</a> for an amazing guide on using the Theme maker.',
       },
     ]}
   />
