Add Enhanced GNOME content widget

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -145,37 +145,30 @@ const metadata = {
   <!-- Content Widget **************** -->
   <Content
     isReversed
-    isAfterContent
+    tagline="Enhanced GNOME"
+    title="GNOME but enhanced for Niieux"
     items={[
       {
-        title: 'Enhanced user engagement',
+        title: 'Optimized for better performance',
         description:
-          'Captivate your audience with interactive elements, intuitive navigation, and visually appealing layouts, encouraging longer visits.',
+          'Niieux has modified GNOME to run faster and use less RAM.',
       },
       {
-        title: 'Continuous improvement',
+        title: 'Better productivity',
         description:
-          'Ensure your website stays aligned with the latest trends and technologies through regular updates and enhancements.',
+          'Niieux has modified GNOME applications like Nautilus to have features like split view for better productivity. ',
       },
       {
-        title: 'Time and resource efficiency',
+        title: 'Niieux Theme Switcher integration',
         description:
-          'Skip the time-consuming process of building a website from scratch and launch your online presence sooner with AstroWind.',
-      },
-      {
-        title: 'Community support',
-        description: `Join the growing AstroWind community for insights, resources, and assistance, ensuring you're never alone on your web development journey.`,
+          'GNOME has been enhanced to integrate better with the Niieux themes. ',
       },
     ]}
     image={{
-      src: 'https://images.unsplash.com/photo-1611462985358-60d3498e0364?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80',
-      alt: 'Astronauts Image',
+      src: '~/assets/images/niieux-app-center-icon.png',
+      alt: 'Niieux App Center screenshot',
     }}
   >
-    <Fragment slot="content">Designed to foster growth and success.</Fragment>
-    <Fragment slot="bg">
-      <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
-    </Fragment>
   </Content>
 
   <!-- Steps Widget ****************** -->
