Replace custom GNOME section with Productivity section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -145,28 +145,28 @@ const metadata = {
   <!-- Content Widget **************** -->
   <Content
     isReversed
-    tagline="Enhanced GNOME"
-    title="GNOME but enhanced for Niieux"
+    tagline="Be more productive"
+    title="Productivity Redifined with Niieux"
     items={[
       {
-        title: 'Optimized for better performance',
+        title: 'Seamless Ecosystem',
         description:
-          'Niieux has modified GNOME to run faster and use less RAM.',
+          'Niieux applications like the Theme Switcher and App Center integrate seamlessly with the desktop allowing you to search for applications directly in the GNOME App Menu and apply themes directly from settings.',
       },
       {
-        title: 'Better productivity',
+        title: 'Multitasking just got better',
         description:
-          'Niieux has modified GNOME applications like Nautilus to have features like split view for better productivity. ',
+          'Niieux has modified the Nautilus file manager to have features like split view for better productivity and many other features have been added.',
       },
       {
-        title: 'Niieux Theme Switcher integration',
+        title: 'No crashes or windows freezing',
         description:
-          'GNOME has been enhanced to integrate better with the Niieux themes. ',
+          'Niieux is built to be extremely stable and not freeze or crash. ',
       },
     ]}
     image={{
-      src: '~/assets/images/niieux-app-center-icon.png',
-      alt: 'Niieux App Center screenshot',
+      src: '~/assets/images/niieux-productivity.png',
+      alt: 'Niieux Productivity screenshot',
     }}
   >
   </Content>
@@ -214,7 +214,7 @@ const metadata = {
       {
         title: 'Why Niieux?',
         description:
-          "Niieux is faster than most GNU/Linux distros that offer the same level of customizability.",
+          "Niieux is customizable yet powerful and fast compared to other GNU/Linux distributions (see https://niieux.com/compare).",
       },
       {
         title: 'How do I install ?',
@@ -229,7 +229,7 @@ const metadata = {
       {
         title: "I need help making a Theme on the Theme Maker?",
         description:
-          'Visit <a href="https://github.com/Niieux/docs/theme-maker-guide.md" target="_blank" rel="noopener noreferrer">https://github.com/Niieux/docs/blob/main/theme-maker-guide.md</a> for an amazing guide on using the Theme maker.',
+          'Visit <a href="https://github.com/Niieux/docs/blob/main/theme-maker-guide.md" target="_blank" rel="noopener noreferrer">https://github.com/Niieux/docs/blob/main/theme-maker-guide.md</a> for an amazing guide on using the Theme maker.',
       },
     ]}
   />
