--- a/src/components/widgets/Content.astro
+++ b/src/components/widgets/Content.astro
@@ -75,7 +75,7 @@ const {
               {typeof image === 'string' ? (
                 <Fragment set:html={image} />
               ) : (
-                
+                <Image
                   class="mx-auto w-full rounded-lg bg-gray-500 shadow-lg"
                   width={768}
                   widths={[400, 768]}
