Update download button text and link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,8 +25,8 @@ const metadata = {
     actions={[
       {
         variant: 'primary',
-        text: 'Download now',
-        href: 'https://github.com/Niieux/niieux-build',
+        text: 'Install now',
+        href: 'https://iso.niieux.com',
         target: '_blank',
         icon: 'tabler:download',
       },
