Correct typos and improve phrasing in the content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ const metadata = {
     image={{ src: '~/assets/images/hero-image.png', alt: 'Niieux Desktop Screenshot' }}
   >
     <Fragment slot="title">
-      A all new GNU/Linux <span class="hidden xl:inline">distro</span>
+      Niieux. Linux, Reimagined <span class="hidden xl:inline">distro</span>
       <span class="text-accent dark:text-white"></span>
     </Fragment>
 
@@ -66,7 +66,7 @@ const metadata = {
       {
         title: 'Lightning Fast',
         description:
-          'Niieux is tailored for the best performance possible while trying not to compromise the look and feel of the operating system.',
+          'Niieux is tailored for the best performance possible while not compromising the look and feel of the operating system.',
         icon: 'tabler:rocket',
       },
       {
@@ -146,17 +146,17 @@ const metadata = {
   <Content
     isReversed
     tagline="Be more productive"
-    title="Productivity Redifined with Niieux"
+    title="Productivity Redefined with Niieux"
     items={[
       {
         title: 'Seamless Ecosystem',
         description:
-          'Niieux applications like the Theme Switcher and App Center integrate seamlessly with the desktop allowing you to search for applications directly in the GNOME App Menu and apply themes directly from settings.',
+          'Niieux applications such as the Theme Switcher and App Center integrate seamlessly with the desktop allowing you to search for applications directly in the GNOME App Menu and apply themes directly from settings.',
       },
       {
         title: 'Multitasking just got better',
         description:
-          'Niieux has modified the Nautilus file manager to have features like split view for better productivity and many other features have been added.',
+          'Niieux has modified the Nautilus file manager to have features such as split view for better productivity and many other features have been added.',
       },
       {
         title: 'No crashes or windows freezing',
