Update title text for index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ const metadata = {
     image={{ src: '~/assets/images/hero-image.png', alt: 'Niieux Desktop Screenshot' }}
   >
     <Fragment slot="title">
-      Niieux. Linux, Reimagined <span class="hidden xl:inline">distro</span>
+      Niieux. Linux, <span class="hidden xl:inline">Reimagined</span>
       <span class="text-accent dark:text-white"></span>
     </Fragment>
 
