Update title in index.astro for branding change

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -214,7 +214,7 @@ const metadata = {
     ]}
   >
     <Fragment slot="title">
-      Astro&nbsp;+&nbsp;<br class="block sm:hidden" /><span class="sm:whitespace-nowrap">Tailwind CSS</span>
+      Niieux&nbsp;:&nbsp;<br class="block sm:hidden" /><span class="sm:whitespace-nowrap">Linux, Reimagined</span>
     </Fragment>
 
     <Fragment slot="subtitle">
