Revise theme descriptions and FAQ subtitles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -95,12 +95,12 @@ const metadata = {
       {
         title: 'Preinstalled themes',
         description:
-          'Niieux comes with two themes preinstalled: MacOS-Like and Ubuntu-Like.',
+          'Niieux comes with two themes preinstalled: MacOS Inspired and Ubuntu Inspired. These are examples for you to make your own theme with the Theme Maker.',
       },
       {
         title: 'Create your own theme',
         description:
-          'You can even create your own theme through the online theme maker website and download it. You will download it as a JSON file which you can right click > open with > Niieux Theme Installer[...]',
+          'You can even create your own theme through the Theme Maker application and download it. You will download it as a JSON file which you can right click > open with > Niieux Theme Installer[...]',
       },
     ]}
     image={{
@@ -174,7 +174,7 @@ const metadata = {
   <!-- FAQs Widget ******************* -->
   <FAQs
     title="Frequently Asked Questions"
-    subtitle="Dive into the following questions to gain insights into the powerful features that AstroWind offers and how it can elevate your web development journey."
+    subtitle="FAQ"
     tagline="FAQs"
     classes={{ container: 'max-w-6xl' }}
     items={[
@@ -214,7 +214,7 @@ const metadata = {
     ]}
   >
     <Fragment slot="title">
-      Niieux&nbsp;:&nbsp;<br class="block sm:hidden" /><span class="sm:whitespace-nowrap">Linux, Reimagined</span>
+      Niieux&nbsp;.&nbsp;<br class="block sm:hidden" /><span class="sm:whitespace-nowrap"> Linux, Reimagined</span>
     </Fragment>
 
     <Fragment slot="subtitle">
