Clear subtitle in FAQs widget

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -173,7 +173,7 @@ const metadata = {
   <!-- FAQs Widget ******************* -->
   <FAQs
     title="Frequently Asked Questions"
-    subtitle="FAQ"
+    subtitle=" "
     tagline="FAQs"
     classes={{ container: 'max-w-6xl' }}
     items={[
