Fix hero text getting cropped

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,13 +34,12 @@ const metadata = {
     image={{ src: '~/assets/images/hero-image.png', alt: 'Niieux Desktop Screenshot' }}
   >
     <Fragment slot="title">
-      Niieux. Linux, <span class="hidden xl:inline">Reimagined</span>
-      <span class="text-accent dark:text-white"></span>
+      Niieux. <br class="block sm:hidden" />
+      Linux, Reimagined
     </Fragment>
-
+  
     <Fragment slot="subtitle">
-      <span class="hidden sm:inline">
-        <span class="font-semibold">Niieux</span> <span class="hidden xl:inline">is a Debian 13-based Linux distro designed for beginners and developers, featuring a modified, faster and more customizable GNOME desktop, no bloatware, and Flatpak support.</span>
+      <span class="font-semibold">Niieux</span> is a Debian 13-based Linux distro designed for beginners and developers, featuring a modified, faster and more customizable GNOME desktop, no bloatware, and Flatpak support.
     </Fragment>
   </Hero>
 
