--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,10 +33,10 @@ const metadata = {
     ]}
     image={{ src: '~/assets/images/hero-image.png', alt: 'Niieux Desktop Screenshot' }}
   >
-    <Fragment slot="title">
-      Niieux. <br class="block sm:hidden" />
-       Linux, Reimagined
-    </Fragment>
+  <Fragment slot="title">
+    Niieux.&nbsp;Linux, <span class="hidden xl:inline">Reimagined</span>
+    <span class="text-accent dark:text-white"></span>
+  </Fragment>
   
     <Fragment slot="subtitle">
       <span class="font-semibold">Niieux</span> is a Debian 13-based Linux distro designed for beginners and developers, featuring a modified, faster and more customizable GNOME desktop, no bloatware, and Flatpak support.
