Fix title formatting (again) in index.astro
This is giving me a headache.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,8 +34,7 @@ const metadata = {
     image={{ src: '~/assets/images/hero-image.png', alt: 'Niieux Desktop Screenshot' }}
   >
   <Fragment slot="title">
-    Niieux.&nbsp;Linux, <span class="hidden xl:inline">Reimagined</span>
-    <span class="text-accent dark:text-white"></span>
+    Niieux.&nbsp;Linux,<wbr> Reimagined
   </Fragment>
   
     <Fragment slot="subtitle">
